Refer icon added instead of take photo

--- a/photoshare/photoshare/HomeViewController_iPad.xib
+++ b/photoshare/photoshare/HomeViewController_iPad.xib
@@ -39,12 +39,12 @@
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home-photo-quicklink.png" id="s7I-AR-BHF">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="referr-icon.png" id="s7I-AR-BHF">
                             <rect key="frame" x="68" y="117" width="130" height="100"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Take a photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jqB-5s-Xsn">
-                            <rect key="frame" x="64" y="237" width="139" height="30"/>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invite Friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jqB-5s-Xsn">
+                            <rect key="frame" x="53" y="237" width="154" height="30"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -127,7 +127,7 @@
     </objects>
     <resources>
         <image name="folder-icon.png" width="135" height="94"/>
-        <image name="home-photo-quicklink.png" width="135" height="93"/>
         <image name="homepage.jpg" width="640" height="1136"/>
+        <image name="referr-icon.png" width="286" height="209"/>
     </resources>
 </document>
