--- a/photoshare/photoshare/ReferFriendViewController_iPad.xib
+++ b/photoshare/photoshare/ReferFriendViewController_iPad.xib
@@ -23,9 +23,12 @@
                     <fontDescription key="fontDescription" type="system" pointSize="38"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
-                <webView contentMode="scaleToFill" fixedFrame="YES" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZPD-AV-MtR">
+                <webView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZPD-AV-MtR">
                     <rect key="frame" x="0.0" y="427" width="768" height="480"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="Nfx-V9-Ya7"/>
+                    </connections>
                 </webView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
