--- a/photoshare/photoshare/AddEditFolderViewController.xib
+++ b/photoshare/photoshare/AddEditFolderViewController.xib
@@ -14,8 +14,8 @@
                 <outlet property="folderNameView" destination="qg9-d2-zHT" id="slx-5v-VCo"/>
                 <outlet property="saveButton" destination="pXp-aO-0b0" id="oDY-gd-hrT"/>
                 <outlet property="scrollView" destination="9Fu-hu-Y5m" id="LyJ-Od-bUZ"/>
-                <outlet property="shareForReadingWithBtn" destination="p5B-NR-aID" id="QLy-Rt-fgL"/>
-                <outlet property="shareForWritingWithBtn" destination="zWm-52-rGZ" id="uA0-fk-SdP"/>
+                <outlet property="shareForReadingWithBtn" destination="zWm-52-rGZ" id="m81-zT-9Vd"/>
+                <outlet property="shareForWritingWithBtn" destination="p5B-NR-aID" id="e13-g6-ZgL"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -59,7 +59,7 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" id="qg9-d2-zHT">
-                            <rect key="frame" x="47" y="86" width="210" height="35.000002363945583"/>
+                            <rect key="frame" x="47" y="86" width="210" height="35.000002391438535"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <textField opaque="NO" clipsSubviews="YES" tag="1101" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Collection Name" minimumFontSize="17" id="CeT-09-z0D">
@@ -85,25 +85,25 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="zWm-52-rGZ">
-                            <rect key="frame" x="49" y="142" width="155" height="30"/>
+                            <rect key="frame" x="69" y="143" width="131" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Share for Writing With">
+                            <state key="normal" title="Share - view only">
                                 <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="shareForWritingWith:" destination="-1" eventType="touchUpInside" id="b5Z-pH-D1a"/>
+                                <action selector="shareForReadingWith:" destination="-1" eventType="touchUpInside" id="RS2-NG-aTN"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="p5B-NR-aID">
-                            <rect key="frame" x="49" y="186" width="159" height="30"/>
+                            <rect key="frame" x="40" y="186" width="189" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Share for Reading With">
+                            <state key="normal" title="Share - view &amp; add pictures">
                                 <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="shareForReadingWith:" destination="-1" eventType="touchUpInside" id="P1Z-hN-euB"/>
+                                <action selector="shareForWritingWith:" destination="-1" eventType="touchUpInside" id="DyS-qL-rJd"/>
                             </connections>
                         </button>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Collection Owner Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ws5-eK-yAJ">
